<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pujolsluis.android.justjava.MainActivity">


    <TextView
        android:text="@string/textView_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_chocolate"
        android:layout_marginTop="16dp" />

    <Button
        android:text="@string/textView_minus"
        android:layout_height="48dp"
        android:id="@+id/button_decreaseQ"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="88dp"
        android:onClick="decreaseQuantity"/>

    <TextView
        android:text="@string/textView_quantityTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_QuantityTotal"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button_decreaseQ"
        app:layout_constraintTop_toTopOf="@+id/button_decreaseQ"
        app:layout_constraintBottom_toBottomOf="@+id/button_decreaseQ" />

    <Button
        android:text="@string/textView_plus"
        android:layout_height="48dp"
        android:id="@+id/button_increaseQ"
        app:layout_constraintBottom_toBottomOf="@+id/textView_QuantityTotal"
        app:layout_constraintTop_toTopOf="@+id/textView_QuantityTotal"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/textView_QuantityTotal"
        android:onClick="increaseQuantity"
        android:layout_width="88dp" />


    <Button
        android:text="@string/textView_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_Order"
        app:layout_constraintTop_toBottomOf="@+id/button_decreaseQ"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="Order"
        android:onClick="orderCoffe"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_personName"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:hint="Name"
        style="@style/Widget.AppCompat.EditText"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/textView_toppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_toppings"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_personName"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAllCaps="true" />

    <CheckBox
        android:text="Whipped Cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox_whippedCream"
        app:layout_constraintTop_toBottomOf="@+id/textView_toppings"
        app:layout_constraintLeft_toLeftOf="@+id/textView_toppings"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:text="Chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox_chocolate"
        app:layout_constraintLeft_toLeftOf="@+id/textView_toppings"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_whippedCream"
        android:layout_marginTop="16dp" />


</android.support.constraint.ConstraintLayout>
